--- a/app/globals.css
+++ b/app/globals.css
@@ -10,5 +10,9 @@
 }
 
 .page-size {
-  @apply max-w-screen-2xl w-full mx-auto;
+  @apply mx-auto w-full max-w-screen-2xl;
+}
+
+.grid-layout {
+  @apply page-size mt-24 grid items-start justify-center gap-4 px-6 text-foreground sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 ;
 }
